--- a/example/index.html
+++ b/example/index.html
@@ -39,7 +39,8 @@
     <center><h1 id="points">H 0 : 0 C</h1></center>
   </div>
 
-  <script src="tictactoe.min.js"></script>
+  <!-- <script src="tictactoe.min.js"></script> -->
+  <script src="../tictactoe.js"></script>
   <script>
     const ttt = TicTacToe('#ttt-game');
     ttt.setWinHandler(p => alert(`Player "${p}" WINS!`));
